# pdfcon

./: README.md  pyproject.toml
src/pdfcon1/: app.py  crew.py  main.py
src/pdfcon1/config/: agents.yaml  tasks.yaml
src/pdfcon1/visionllm/: demo.py
src/pdfcon1/visionllmst/: app.py  demo.py  utility.py
