[project]
name = "pdfcon1"
version = "0.1.0"
description = "pdfcon1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "pytesseract>=0.3.13",
]

[project.scripts]
pdfcon1 = "pdfcon1.main:run"
run_crew = "pdfcon1.main:run"
train = "pdfcon1.main:train"
replay = "pdfcon1.main:replay"
test = "pdfcon1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
